# ed25519-consensus

./: Cargo.toml
benches/: bench.rs
src/: batch.rs  signing_key.rs  verification_key.rs
tests/: batch.rs  rfc8032.rs  small_order.rs  unit_tests.rs
