[package]
name = "ed25519-consensus"
# Before publishing:
# - update CHANGELOG.md
# - update html_root_url
version = "2.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/penumbra-zone/ed25519-consensus"
description = "Ed25519 suitable for use in consensus-critical contexts."
resolver = "2"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.9", default-features = false }
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "digest", "zeroize"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
zeroize = { version = "1.8", default-features = false }
thiserror = { version = "2.0", optional = true }

[dev-dependencies]
rand = "0.9"
bincode = { version = "2.0", features = ["serde"] }
criterion = "0.6"
ed25519-zebra-legacy = { package = "ed25519-zebra", version = "1" }
color-eyre = "0.6"
once_cell = "1.21"

[features]
std = ["thiserror"]
default = ["serde", "std"]

[[test]]
name = "rfc8032"

[[test]]
name = "unit_tests"

[[test]]
name = "batch"

[[bench]]
name = "bench"
harness = false
